iptables/iptables.2.conf
# Generated by iptables-save v1.6.0 on Sun Jul 22 17:00:34 2018
*nat
:PREROUTING ACCEPT [580:34495]
:INPUT ACCEPT [579:34412]
:OUTPUT ACCEPT [204:15037]
:POSTROUTING ACCEPT [137:9081]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Jul 22 17:00:34 2018
# Generated by iptables-save v1.6.0 on Sun Jul 22 17:00:34 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:f2b-nginx-http-auth - [0:0]
:f2b-sshd - [0:0]
:f2b-wordpress - [0:0]
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-wordpress
-A INPUT -p tcp -m multiport --dports 9922 -j f2b-sshd
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9922 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9922 -j ACCEPT
-A OUTPUT -j DROP
-A f2b-nginx-http-auth -s 190.52.52.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-nginx-http-auth -j RETURN
-A f2b-sshd -s 190.52.52.166/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A f2b-wordpress -j RETURN
COMMIT
# Completed on Sun Jul 22 17:00:34 2018
