iptables/iptables.conf
# Generated by iptables-save v1.6.0 on Wed Sep  5 06:43:17 2018
*nat
:PREROUTING ACCEPT [22109:1311764]
:INPUT ACCEPT [22109:1311764]
:OUTPUT ACCEPT [178345:12092396]
:POSTROUTING ACCEPT [125017:8039432]
COMMIT
# Completed on Wed Sep  5 06:43:17 2018
# Generated by iptables-save v1.6.0 on Wed Sep  5 06:43:17 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:f2b-nginx-http-auth - [0:0]
:f2b-sshd - [0:0]
:f2b-wordpress - [0:0]
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-nginx-http-auth
-A INPUT -p tcp -m multiport --dports 80,443 -j f2b-wordpress
-A INPUT -p tcp -m multiport --dports 9922 -j f2b-sshd
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9922 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9922 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Wed Sep  5 06:43:17 2018
